code/python/Publisher/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Publisher client library for Python

[![API Version](https://img.shields.io/badge/api-v3.12.6-blue)](https://developer.factset.com/api-catalog/)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.Publisher/0.22.0)](https://pypi.org/project/fds.sdk.Publisher/v/0.22.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.12.6
- SDK version: 0.22.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.Publisher==0.22.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.Publisher==0.22.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.7+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.9.7
      pyenv shell 3.9.7
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.Publisher
from fds.sdk.Publisher.api import accounts_api
from fds.sdk.Publisher.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.Publisher.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.Publisher.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.Publisher.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = accounts_api.AccountsApi(api_client)
    path = "Client:" # str | The directory to get the accounts and sub-directories.

    try:
        # Get accounts and sub-directories in a directory
        # example passing only required values which don't have defaults set
        api_response = api_instance.get_accounts(path)

        pprint(api_response)
    except fds.sdk.Publisher.ApiException as e:
        print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get accounts and sub-directories in a directory
    #     api_response, http_status_code, response_headers = api_instance.get_accounts_with_http_info(path)


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.Publisher.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_async(path)
    #     api_response = async_result.get()


    #     pprint(api_response)
    # except fds.sdk.Publisher.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get accounts and sub-directories in a directory
    #     async_result = api_instance.get_accounts_with_http_info_async(path)
    #     api_response, http_status_code, response_headers = async_result.get()


    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.Publisher.ApiException as e:
    #     print("Exception when calling AccountsApi->get_accounts: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.Publisher

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.Publisher.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.Publisher

configuration = fds.sdk.Publisher.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.Publisher

configuration = fds.sdk.Publisher.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.Publisher

configuration = fds.sdk.Publisher.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**get_accounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/AccountsApi.md#get_accounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*CurrenciesApi* | [**get_currencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CurrenciesApi.md#get_currencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*DocumentsApi* | [**get_pub_documents**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/DocumentsApi.md#get_pub_documents) | **GET** /analytics/engines/pub/v3/documents/{path} | Gets Publisher documents and sub-directories in a directory
*PubCalculationsApi* | [**cancel_calculation_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#cancel_calculation_by_id) | **DELETE** /analytics/engines/pub/v3/calculations/{id} | Cancel Pub calculation by id
*PubCalculationsApi* | [**get_all_calculations**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#get_all_calculations) | **GET** /analytics/engines/pub/v3/calculations | Get all calculations
*PubCalculationsApi* | [**get_calculation_parameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#get_calculation_parameters) | **GET** /analytics/engines/pub/v3/calculations/{id} | Get Pub calculation parameters by id
*PubCalculationsApi* | [**get_calculation_status_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#get_calculation_status_by_id) | **GET** /analytics/engines/pub/v3/calculations/{id}/status | Get Pub calculation status by id
*PubCalculationsApi* | [**get_calculation_unit_result_by_id**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#get_calculation_unit_result_by_id) | **GET** /analytics/engines/pub/v3/calculations/{id}/units/{unitId}/result | Get Pub calculation result by id
*PubCalculationsApi* | [**post_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#post_and_calculate) | **POST** /analytics/engines/pub/v3/calculations | Create and Run Pub calculation
*PubCalculationsApi* | [**put_and_calculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationsApi.md#put_and_calculate) | **PUT** /analytics/engines/pub/v3/calculations/{id} | Create or Update Pub calculation and run it.


## Documentation For Models

 - [AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/AccountDirectories.md)
 - [AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/AccountDirectoriesRoot.md)
 - [CalculationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationStatus.md)
 - [CalculationStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationStatusMeta.md)
 - [CalculationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationStatusRoot.md)
 - [CalculationUnitStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationUnitStatus.md)
 - [CalculationUnitStatusMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationUnitStatusMeta.md)
 - [CalculationsSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationsSummary.md)
 - [CalculationsSummaryRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CalculationsSummaryRoot.md)
 - [ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/ClientErrorResponse.md)
 - [Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/Currency.md)
 - [CurrencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/CurrencyRoot.md)
 - [DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/DocumentDirectories.md)
 - [DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/DocumentDirectoriesRoot.md)
 - [Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/Error.md)
 - [ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/ErrorSource.md)
 - [PaginationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PaginationInfo.md)
 - [PaginationMeta](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PaginationMeta.md)
 - [PubCalculationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationParameters.md)
 - [PubCalculationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubCalculationParametersRoot.md)
 - [PubDateParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubDateParameters.md)
 - [PubIdentifier](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/Publisher/v3/docs/PubIdentifier.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.Publisher.apis and fds.sdk.Publisher.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.Publisher.api.default_api import DefaultApi`
- `from fds.sdk.Publisher.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.Publisher
from fds.sdk.Publisher.apis import *
from fds.sdk.Publisher.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

